--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <div id="enterSite">
       <div class="flex rows">
         <div class="intro flex flex--center align-center columns unit">
-          <h1 class="introd">Introducing</h1>
-          <h1 class="logo">oyp</h1><span class="enter">Enter Site</span>
+          <h1 class="introd item">Introducing</h1>
+          <h1 class="logo item">oyp</h1><span class="enter item">Enter Site</span>
         </div>
         <div class="pics unit"></div>
       </div>
@@ -19,7 +19,7 @@
       <nav class="global">
         <div class="flex flex--space-around align-center rows">
           <h1 class="logo">oyp</h1>
-          <div class="link flex flex--center align-center rows"><a href=""><span>Home</span></a><a href=""><span>photos</span></a><a href=""><span>Home</span></a><a href=""><span>Home</span></a><a href=""><span>Home</span></a></div>
+          <div class="link flex flex--center align-center rows"><a href=""><span>Home</span></a><a href=""><span>photos</span></a><a href=""><span>Home</span></a><a href=""><span>Home</span></a><a href=""><span>Home</span></a><a class="back" href="">back</a></div>
         </div>
       </nav>
       <section class="lockup flex flex--center align-center rows">
@@ -42,15 +42,15 @@
         <div class="flex-grid flex rows">
           <div class="col columns flex">
             <div class="row flex rows">
-              <div class="pic-small"></div>
-              <div class="pic-small"></div>
+              <div class="pic pic-small"></div>
+              <div class="pic pic-small"></div>
             </div>
             <div class="row flex">
-              <div class="lrg"></div>
+              <div class="pic lrg"></div>
             </div>
             <div class="row flex columns"></div>
           </div>
-          <div class="col lrg-pic"></div>
+          <div class="col pic lrg-pic"></div>
         </div>
       </div>
     </div>
