--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         </div>
       </nav>
       <section class="lockup flex flex--center align-center rows">
-        <div class="flex-unit flex flex--start align-center columns" data-id="1">
-          <h3>EDITORIAL</h3><a href=""><span>portait</span></a>
+        <div class="flex-unit flex flex--center align-center columns edit" data-id="1">
+          <h3>people</h3>
         </div>
-        <div class="flex-unit flex flex--start align-center columns" data-id="2">
-          <h3>landscapes</h3><a href=""><span>portait</span></a>
+        <div class="flex-unit flex flex--center align-center columns land" data-id="2">
+          <h3>landscapes</h3>
         </div>
-        <div class="flex-unit flex flex--start align-center columns" data-id="3">
-          <h3>portfolio</h3><a href=""><span>portait	</span></a>
+        <div class="flex-unit flex flex--center align-center columns port" data-id="3">
+          <h3>mixed</h3>
         </div>
       </section>
     </div>
     <div class="editorials">
       <div class="flex flex--center align-center columns">
         <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
-          <h1>Editorials </h1>
+          <h1>People </h1>
           <div class="btn-locker flex flex--center align-center rows">
             <div class="btn btn-accepted"><span>Accepted</span></div>
             <div class="btn btn-all"><span>All</span></div>
