--- a/index.html
+++ b/index.html
@@ -59,5 +59,55 @@
         </div>
       </div>
     </div>
+    <div class="mixed">
+      <div class="flex flex--center align-center columns">
+        <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
+          <h1>Mixed </h1>
+          <div class="btn-locker flex flex--center align-center rows">
+            <div class="btn btn-accepted"><span>Accepted</span></div>
+            <div class="btn btn-all"><span>All</span></div>
+            <div class="btn btn-rejected"><span>REJECTED</span></div>
+          </div>
+        </div>
+        <div class="flex-grid flex rows">
+          <div class="col columns flex">
+            <div class="row flex rows">
+              <div class="pic pic-small" data-state="accepted"></div>
+              <div class="pic pic-small" data-state="unaccepted"></div>
+            </div>
+            <div class="row flex">
+              <div class="pic lrg"></div>
+            </div>
+            <div class="row flex columns"></div>
+          </div>
+          <div class="col pic lrg-pic"></div>
+        </div>
+      </div>
+    </div>
+    <div class="landscapes">
+      <div class="flex flex--center align-center columns">
+        <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
+          <h1>Landscapes </h1>
+          <div class="btn-locker flex flex--center align-center rows">
+            <div class="btn btn-accepted"><span>Accepted</span></div>
+            <div class="btn btn-all"><span>All</span></div>
+            <div class="btn btn-rejected"><span>REJECTED</span></div>
+          </div>
+        </div>
+        <div class="flex-grid flex rows">
+          <div class="col columns flex">
+            <div class="row flex rows">
+              <div class="pic pic-small" data-state="accepted"></div>
+              <div class="pic pic-small" data-state="unaccepted"></div>
+            </div>
+            <div class="row flex">
+              <div class="pic lrg"></div>
+            </div>
+            <div class="row flex columns"></div>
+          </div>
+          <div class="col pic lrg-pic"></div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
