--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
           <h1 class="introd item">Introducing</h1>
           <h1 class="logo item">oyp</h1><span class="enter item">Enter Site</span>
         </div>
-        <div class="pics unit"></div>
+        <div class="wrapper">
+          <div class="pics unit"></div>
+        </div>
       </div>
     </div>
     <div class="main-body">
@@ -24,7 +26,7 @@
       </nav>
       <section class="lockup flex flex--center align-center rows">
         <div class="flex-unit flex flex--center align-center columns edit" data-id="1">
-          <h3>people</h3>
+          <h3>People</h3>
         </div>
         <div class="flex-unit flex flex--center align-center columns land" data-id="2">
           <h3>landscapes</h3>
@@ -37,7 +39,7 @@
     <div class="editorials">
       <div class="flex flex--center align-center columns">
         <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
-          <h1>People </h1>
+          <h1 class="head-title">People</h1>
           <div class="btn-locker flex flex--center align-center rows">
             <div class="btn btn-accepted"><span>Accepted</span></div>
             <div class="btn btn-all"><span>All</span></div>
@@ -62,7 +64,7 @@
     <div class="mixed">
       <div class="flex flex--center align-center columns">
         <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
-          <h1>Mixed </h1>
+          <h1 class="head-title">Mixed </h1>
           <div class="btn-locker flex flex--center align-center rows">
             <div class="btn btn-accepted"><span>Accepted</span></div>
             <div class="btn btn-all"><span>All</span></div>
@@ -87,7 +89,7 @@
     <div class="landscapes">
       <div class="flex flex--center align-center columns">
         <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
-          <h1>Landscapes </h1>
+          <h1 class="head-title">Landscapes </h1>
           <div class="btn-locker flex flex--center align-center rows">
             <div class="btn btn-accepted"><span>Accepted</span></div>
             <div class="btn btn-all"><span>All</span></div>
