--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
+    <div class="back-drop flex flex--center align-center">
+      <div class="about-me flex flex--center align-center columns">
+        <h1>Hi my name is Phillip</h1>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem reiciendis repellat ipsam quaerat consequuntur aliquam eum repellendus perferendis numquam ducimus modi praesentium iusto, rerum. Perferendis, atque illum porro veniam quam.</p><span class="closer">Close</span>
+      </div>
+    </div>
     <div id="enterSite">
       <div class="flex rows">
         <div class="intro flex flex--center align-center columns unit">
@@ -21,7 +27,7 @@
       <nav class="global">
         <div class="flex flex--space-around align-center rows">
           <h1 class="logo">oyp</h1>
-          <div class="link flex flex--center align-center rows"><a href=""><span>Home</span></a><a href=""><span>photos</span></a><a href=""><span>Home</span></a><a href=""><span>Home</span></a><a href=""><span>Home</span></a><a class="back" href="">back</a></div>
+          <div class="link flex flex--center align-center rows"><span class="about">About Me</span><span>photos</span><span class="site-intro">Site intro</span></div>
         </div>
       </nav>
       <section class="lockup flex flex--center align-center rows">
