--- a/index.html
+++ b/index.html
@@ -30,22 +30,28 @@
           <div class="link flex flex--center align-center rows"><span class="about">About Me</span><span>photos</span><span class="site-intro">Site intro</span></div>
         </div>
       </nav>
-      <section class="lockup flex flex--center align-center rows">
-        <div class="flex-unit flex flex--center align-center columns edit" data-id="1">
-          <h3>People</h3>
+      <section class="lockup flex flex--center align-center columns">
+        <div class="about-section flex flex--center align-center columns">
+          <h1>Hello my name is philly</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="flex-unit flex flex--center align-center columns land" data-id="2">
-          <h3>landscapes</h3>
-        </div>
-        <div class="flex-unit flex flex--center align-center columns port" data-id="3">
-          <h3>mixed</h3>
+        <div class="container flex flex--center align-center rows">
+          <div class="flex-unit flex flex--center align-center columns edit" data-id="1">
+            <h3>People</h3>
+          </div>
+          <div class="flex-unit flex flex--center align-center columns land" data-id="2">
+            <h3>landscapes</h3>
+          </div>
+          <div class="flex-unit flex flex--center align-center columns port" data-id="3">
+            <h3>mixed</h3>
+          </div>
         </div>
       </section>
     </div>
     <div class="editorials">
       <div class="flex flex--center align-center columns">
         <div class="title flex flex--center align-center columns"><i class="fa fa-arrow-left"><span>Back to selection</span></i>
-          <h1 class="head-title">People</h1>
+          <h1 class="head-title">People </h1>
           <div class="btn-locker flex flex--center align-center rows">
             <div class="btn btn-accepted"><span>Accepted</span></div>
             <div class="btn btn-all"><span>All</span></div>
@@ -55,15 +61,35 @@
         <div class="flex-grid flex rows">
           <div class="col columns flex">
             <div class="row flex rows">
-              <div class="pic pic-small" data-state="accepted"></div>
-              <div class="pic pic-small" data-state="unaccepted"></div>
+              <div class="pic pic-small posr" data-state="accepted">
+                <div class="overlay posa flex flex--center align-center columns">
+                  <h1>#2</h1>
+                  <div class="btm flex flex--space-around posa align-center"><i class="fa fa-heart"> </i><span>12</span></div>
+                </div>
+              </div>
+              <div class="pic pic-small posr" data-state="unaccepted">
+                <div class="overlay posa"></div>
+              </div>
             </div>
             <div class="row flex">
-              <div class="pic lrg"></div>
+              <div class="pic lrg-pic posr" data-state="accepted">
+                <div class="overlay posa"></div>
+              </div>
             </div>
-            <div class="row flex columns"></div>
+            <div class="row flex">
+              <div class="pic pic-small posr" data-state="accepted">
+                <div class="overlay posa"></div>
+              </div>
+              <div class="pic pic-small posr" data-state="unaccepted">
+                <div class="overlay posa"></div>
+              </div>
+            </div>
           </div>
-          <div class="col pic lrg-pic"></div>
+          <div class="col">
+            <div class="pic lrg-pic posr" data-state="unaccepted">
+              <div class="overlay posa"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -84,11 +110,16 @@
               <div class="pic pic-small" data-state="unaccepted"></div>
             </div>
             <div class="row flex">
-              <div class="pic lrg"></div>
+              <div class="pic lrg-pic" data-state="accepted"></div>
             </div>
-            <div class="row flex columns"></div>
+            <div class="row flex">
+              <div class="pic pic-small" data-state="accepted"></div>
+              <div class="pic pic-small" data-state="unaccepted"></div>
+            </div>
           </div>
-          <div class="col pic lrg-pic"></div>
+          <div class="col">
+            <div class="pic pic lrg-pic" data-state="unaccepted"></div>
+          </div>
         </div>
       </div>
     </div>
@@ -109,11 +140,16 @@
               <div class="pic pic-small" data-state="unaccepted"></div>
             </div>
             <div class="row flex">
-              <div class="pic lrg"></div>
+              <div class="pic lrg-pic" data-state="accepted"></div>
             </div>
-            <div class="row flex columns"></div>
+            <div class="row flex">
+              <div class="pic pic-small" data-state="accepted"></div>
+              <div class="pic pic-small" data-state="unaccepted"></div>
+            </div>
           </div>
-          <div class="col pic lrg-pic"></div>
+          <div class="col">
+            <div class="pic lrg-pic" data-state="unaccepted"></div>
+          </div>
         </div>
       </div>
     </div>
